ttt, c4: jumping title animation

--- a/ttt.html
+++ b/ttt.html
@@ -47,7 +47,9 @@
 
     <!-- Tic Tac Toe -->
     <div class="tic-tac-toe">
-        <div id="tic-tac-toe__title" data-content="PLAYER VS PLAYER">PLAYER VS PLAYER</div>
+        <div id="tic-tac-toe__title" data-content="PLAYER VS PLAYER">
+            <span>P</span><span>L</span><span>A</span><span>Y</span><span>E</span><span>R</span><span>&nbsp;</span><span>V</span><span>S</span><span>&nbsp;</span><span>P</span><span>L</span><span>A</span><span>Y</span><span>E</span><span>R</span><span></span><span></span>
+        </div>
         <br />
         <div id="tic-tac-toe__difficulty" data-content="DIFFICULTY: EASY">DIFFICULTY: EASY</div>
 
