--- a/c4.html
+++ b/c4.html
@@ -45,7 +45,9 @@
 
     <!-- Connect 4 -->
     <div class="connect-4">
-        <div id="connect-4__title" data-content="PLAYER VS PLAYER">PLAYER VS PLAYER</div>
+        <div id="connect-4__title" data-content="PLAYER VS PLAYER">
+            <span>P</span><span>L</span><span>A</span><span>Y</span><span>E</span><span>R</span><span>&nbsp;</span><span>V</span><span>S</span><span>&nbsp;</span><span>P</span><span>L</span><span>A</span><span>Y</span><span>E</span><span>R</span><span></span><span></span>
+        </div>
         <br />
         <div id="connect-4__difficulty" data-content="DIFFICULTY: EASY">DIFFICULTY: EASY</div>
 
