--- a/public/index.html
+++ b/public/index.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.14.0/css/all.css" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css2?family=Kumbh+Sans:wght@400;700&display=swap" rel="stylesheet">
     <title>Home - Midground</title>
+    <script src="https://accounts.google.com/gsi/client"></script>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
